--- a/package.json
+++ b/package.json
@@ -13,10 +13,21 @@
         "pre-commit": "npm run format && lint-staged && pretty-quick --staged"
     },
     "dependencies": {
+        "@emotion/react": "^11.10.5",
+        "@emotion/styled": "^11.10.5",
+        "@mui/material": "^5.10.16",
+        "axios": "^1.2.0",
         "commitizen": "^4.2.5",
+        "dotenv": "^16.0.3",
+        "formik": "^2.2.9",
+        "localforage": "^1.10.0",
+        "match-sorter": "^6.3.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "validate-branch-name": "^1.3.0"
+        "react-router-dom": "^6.4.3",
+        "sort-by": "^1.2.0",
+        "validate-branch-name": "^1.3.0",
+        "yup": "^0.32.11"
     },
     "devDependencies": {
         "@commitlint/cli": "^17.3.0",
