--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "dependencies": {
         "@emotion/react": "^11.10.5",
         "@emotion/styled": "^11.10.5",
+        "@mui/icons-material": "5.6.2",
         "@mui/material": "^5.10.16",
-        "axios": "^1.2.0",
+        "axios": "^1.2.1",
         "commitizen": "^4.2.5",
         "dotenv": "^16.0.3",
         "formik": "^2.2.9",
         "localforage": "^1.10.0",
         "match-sorter": "^6.3.1",
+        "prop-types": "^15.8.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.4.3",
