--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-hot-toast": "^2.4.0",
         "react-router-dom": "^6.4.3",
         "sort-by": "^1.2.0",
         "validate-branch-name": "^1.3.0",
