--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "react-router-dom": "^6.4.3",
         "sort-by": "^1.2.0",
         "validate-branch-name": "^1.3.0",
+        "vite-plugin-svgr": "^2.4.0",
         "yup": "^0.32.11"
     },
     "devDependencies": {
