--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
         "prepare": "husky install",
         "lint": "eslint \"src/**/*.{js,jsx}\"",
         "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
-        "pre-commit": "npm run format && lint-staged && pretty-quick --staged"
+        "pre-commit": "npm run format && lint-staged && pretty-quick --staged",
+        "test": "vitest",
+        "test:watch": "vitest watch",
+        "test:coverage": "vitest run --coverage"
     },
     "dependencies": {
         "@emotion/react": "^11.10.5",
         "@emotion/styled": "^11.10.5",
         "@mui/icons-material": "5.6.2",
         "@mui/material": "^5.10.16",
+        "@testing-library/user-event": "^14.4.3",
         "axios": "^1.2.1",
         "commitizen": "^4.2.5",
         "dotenv": "^16.0.3",
@@ -36,9 +40,11 @@
     "devDependencies": {
         "@commitlint/cli": "^17.3.0",
         "@commitlint/config-conventional": "^17.3.0",
+        "@testing-library/react": "^13.4.0",
         "@types/react": "^18.0.24",
         "@types/react-dom": "^18.0.8",
         "@vitejs/plugin-react": "^2.2.0",
+        "@vitest/coverage-c8": "^0.26.0",
         "eslint": "^8.28.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-react": "^7.31.11",
@@ -46,7 +52,8 @@
         "lint-staged": "^13.0.3",
         "prettier": "^2.8.0",
         "pretty-quick": "^3.1.3",
-        "vite": "^3.2.3"
+        "vite": "^3.2.3",
+        "vitest": "^0.26.0"
     },
     "config": {
         "commitizen": {
