--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -9,10 +9,12 @@ extends:
   - plugin:react/recommended
   - plugin:react/jsx-runtime
   - prettier
+  - plugin:testing-library/react
 overrides: []
 parserOptions:
   ecmaVersion: latest
   sourceType: module
 plugins:
   - react
+  - testing-library
 rules: {}
