--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "devDependencies": {
         "@commitlint/cli": "^17.3.0",
         "@commitlint/config-conventional": "^17.3.0",
+        "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@types/react": "^18.0.24",
         "@types/react-dom": "^18.0.8",
@@ -49,6 +50,7 @@
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-react": "^7.31.11",
         "husky": "^8.0.0",
+        "jsdom": "^20.0.3",
         "lint-staged": "^13.0.3",
         "prettier": "^2.8.0",
         "pretty-quick": "^3.1.3",
