--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "eslint": "^8.28.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-react": "^7.31.11",
+        "eslint-plugin-testing-library": "^5.9.1",
         "husky": "^8.0.0",
         "jsdom": "^20.0.3",
         "lint-staged": "^13.0.3",
