--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
         "@vitejs/plugin-react": "^2.2.0",
         "@vitest/coverage-c8": "^0.26.0",
         "@vitest/ui": "^0.26.0",
-        "eslint": "^8.28.0",
+        "eslint": "8.22.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-react": "^7.31.11",
         "eslint-plugin-testing-library": "^5.9.1",
