--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,7 @@
 // README at: https://github.com/devcontainers/templates/tree/main/src/javascript-node
 {
     "name": "Barathon_Front",
-    "image": "mcr.microsoft.com/devcontainers/javascript-node:16-bullseye"
+    "image": "mcr.microsoft.com/devcontainers/javascript-node:16-bullseye",
 
     // Features to add to the dev container. More info: https://containers.dev/features.
     // "features": {},
@@ -14,7 +14,16 @@
     // "postCreateCommand": "yarn install",
 
     // Configure tool-specific properties.
-    // "customizations": {},
+    "customizations": {
+        "extensions": [
+            "SonarSource.sonarlint-vscode",
+            "dbaeumer.vscode-eslint",
+            "rvest.vs-code-prettier-eslint",
+            "mhutchie.git-graph",
+            "dsznajder.es7-react-js-snippets",
+            "aaron-bond.better-comments"
+        ]
+    }
 
     // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
     // "remoteUser": "root"
