--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
         "test:coverage": "vitest run --coverage"
     },
     "dependencies": {
-        "@emotion/react": "^11.10.5",
-        "@emotion/styled": "^11.10.5",
+        "@emotion/react": "^11.10.6",
+        "@emotion/styled": "^11.10.6",
         "@mui/icons-material": "5.6.2",
-        "@mui/material": "^5.10.16",
+        "@mui/material": "^5.11.10",
+        "@mui/x-data-grid": "^5.17.25",
         "@testing-library/user-event": "^14.4.3",
         "axios": "^1.2.1",
         "commitizen": "^4.2.5",
@@ -31,6 +32,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hot-toast": "^2.4.0",
+        "react-loader-spinner": "^5.3.4",
         "react-router-dom": "^6.4.3",
         "sort-by": "^1.2.0",
         "validate-branch-name": "^1.3.0",
