--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,7 +11,7 @@
     // "forwardPorts": [],
 
     // Use 'postCreateCommand' to run commands after the container is created.
-     "postCreateCommand": "npm run dev",
+    //"postCreateCommand": "npm run dev",
 
     // Configure tool-specific properties.
     "customizations": {
